# passeval

./: .gitignore  LICENSE  README.md  pyproject.toml  test_passmeter.py
passeval/: __init__.py  constants.py  core.py  features.py  model.py  utils.py
