[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passeval"
version = "0.1.9"
description = "Offline ML-powered password strength evaluation using a trained Random Forest model."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["password", "security", "machine-learning", "strength", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "scikit-learn>=1.6,<2.0",
    "numpy>=1.23",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/yourusername/passmeter"
Repository = "https://github.com/yourusername/passmeter"
Issues = "https://github.com/yourusername/passmeter/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["passeval*"]

[tool.setuptools.package-data]
passeval = ["*.pkl"]
